# PacsCpp

./: CMakeLists.txt  CMakeSettings.json
config/: config.sample.json
src/core/: CMakeLists.txt  Config.cpp  Config.h  PacsServer.cpp  PacsServer.h  PgIndex.cpp  PgIndex.h
src/service/: CMakeLists.txt  ServiceMain.cpp
src/tray/: CMakeLists.txt  WinMain.cpp
